# LEC_Ditto

./: LICENSE  README.md  config.cfg  main.py  pyproject.toml  telegram.py  twitter.py  utils.py
data/: blacklist  users.json
data/usersData/: 803617802732990464
